@startuml

class TravelController {
    -TravelService travelService
    +List<Routes> fetchRoutes(String curerntLocation, String destination)
}


class TravelService {
    +List<Routes> fetchRoutes(String curerntLocation, String destination)

}

class TravelFacade {
    -NSAPI nsAPI
    -KLMAPI klmAPI
    -UberAPI uberAPI
    +List<Routes> fetchRoutes(String curerntLocation, String destination)
}


class NSAPI {
    +String retrieveRoutes(String curerntLocation, String destination)
}

class KLMAPI {
    +String retrieveRoutes(String curerntLocation, String destination)
}

class UberAPI {
    +String retrieveRoutes(String curerntLocation, String destination)
}



TravelFacade o-- NSAPI : usesc
TravelFacade o-- KLMAPI : uses
TravelFacade o-- UberAPI : uses

NSAPI o-- NSRoutes : returns
KLMAPI o-- KLMRoutes : returns
UberAPI o-- UberRoutes : returns

TravelController o-- TravelService : uses
TravelService o-- TravelFacade : uses
@enduml